# pi

./: Cargo.toml  README.md  muit.sh
src/: main.rs  mensage.md  muiltfile.rs.md  palindrome.rs  sig.rs.md  test.md
